improve key saving and loading for authenticator